--- a/public/static/styles/scss/_header.scss
+++ b/public/static/styles/scss/_header.scss
@@ -1,35 +1,18 @@
 header {
-    font-size: 1.5rem;
     background-color: #FF3333;
-    display: flex;
     justify-content: space-between;
-    align-items: center;
-    gap: 5em;
     padding: 0.75em 3em;
     h2 {
         color: #FFFFFF;
         font-size: 4em;
     }
 
-    header > img {
-        width: calc(64px * 1.5);
-        height: calc(32px * 1.5);
-    }
-
-    button {
-        font-size: 1.5em;
-        padding: 0.5em 1em;
-        background-color: rgb(90, 90, 255);
-        border-radius: 0.3em;
-        border: none;
-
-        transition: background-color 70ms ease-in-out;
-        &:hover {
-            background-color: lighten(rgb(90, 90, 255), 2);
-        }
-        &:active {
-            background-color: darken(rgb(90, 90, 255), 2);
+    & > div {
+        width: 33vw;
+        
+        & > img {
+            width: calc(64px * 1.5);
+            height: calc(32px * 1.5);
         }
     }
 }
-
