--- a/public/static/styles/styles.css
+++ b/public/static/styles/styles.css
@@ -1,5 +1,7 @@
 :root {
   font-size: 10px;
+  background-color: rgb(30, 30, 30);
+  overflow-x: hidden;
 }
 
 * {
@@ -7,47 +9,93 @@
   margin: 0;
 }
 
-header {
-  font-size: 1.5rem;
-  background-color: #FF3333;
+.button {
+  padding: 0.5em 1em;
+  background-color: rgb(90, 90, 255);
+  border-radius: 0.3em;
+  border: none;
+  cursor: pointer;
+  transition: background-color 70ms ease-in-out, color 70ms ease-in-out;
+}
+.button:hover {
+  background-color: #6464ff;
+}
+.button:active {
+  background-color: #5050ff;
+}
+
+.small {
+  font-size: 1rem;
+}
+
+.medium {
+  font-size: 2rem;
+}
+
+.big {
+  font-size: 3rem;
+}
+
+.very-big {
+  font-size: 5rem;
+}
+
+.flex {
   display: flex;
-  justify-content: space-between;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-wrap-none {
+  flex-wrap: none;
+}
+
+.flex-justify-center {
+  justify-content: center;
+}
+
+.flex-align-center {
   align-items: center;
+}
+
+.small-gap {
+  gap: 1em;
+}
+
+.medium-gap {
+  gap: 2em;
+}
+
+.big-gap {
   gap: 5em;
+}
+
+header {
+  background-color: #FF3333;
+  justify-content: space-between;
   padding: 0.75em 3em;
 }
 header h2 {
   color: #FFFFFF;
   font-size: 4em;
 }
-header header > img {
+header > div {
+  width: 33vw;
+}
+header > div > img {
   width: 96px;
   height: 48px;
 }
-header button {
-  font-size: 1.5em;
-  padding: 0.5em 1em;
-  background-color: rgb(90, 90, 255);
-  border-radius: 0.3em;
-  border: none;
-  transition: background-color 70ms ease-in-out;
-}
-header button:hover {
-  background-color: #6464ff;
-}
-header button:active {
-  background-color: #5050ff;
-}
 
 #content {
+  height: 70vh;
   padding: 2em 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 5em;
 }
-#content > button {
-  font-size: 10em;
+
+.swipe-button {
+  font-size: 7.5rem;
   background-color: #FF3333;
   border-radius: 0.1em;
   border: none;
@@ -55,15 +103,68 @@ header button:active {
   max-height: 3em;
   transition: background-color 150ms ease-in-out;
 }
-#content > button:hover {
+.swipe-button:hover {
   background-color: #ff4242;
 }
-#content > button:active {
+.swipe-button:active {
   background-color: #ff1f1f;
 }
-#content > #cards {
+
+#cards {
   width: 100vw;
-  height: 50vh;
+  height: 60vh;
+  position: relative;
+}
+
+.card {
+  width: 23vw;
+  height: 28vw;
+  border-radius: 0.75em;
+  border: 2px solid black;
+  background-color: rgb(255, 255, 255);
+  padding: 1em 0.5em;
+  align-items: flex-end;
+  position: absolute;
+  top: 57.5%;
+  right: 50%;
+  transition: filter 1s ease-in-out;
+  transform: translate(50%, -50%) rotate(0deg);
+  -ms-transform: translate(50%, -50%) rotate(0deg);
+}
+.card > div {
+  height: max-content;
+  width: 100%;
+  float: left;
+}
+.card > div > div > .name {
+  font-size: 2em;
+  margin: 0.2em;
+  width: max-content;
+}
+.card > div > div > .age {
+  font-size: 1.25em;
+  width: max-content;
+  color: #FFB52E;
+}
+.card > div > .fpf {
+  font-size: 1.25em;
+}
+
+.swipe-right {
+  transition: transform 2s ease-in-out;
+  transform: translate(400%, -80%) rotate(400deg);
+  -ms-transform: translate(400%, -80%) rotate(400deg);
+}
+
+.swipe-left {
+  transition: transform 10s ease-in-out;
+  transform: translate(-400%, -80%) rotate(-400deg);
+  -ms-transform: translate(-400%, -80%) rotate(-400deg);
+}
+
+.next-card {
+  filter: blur(0.5em);
+  transform: translate(60%, -60%) scale(0.85);
 }
 
 /*# sourceMappingURL=styles.css.map */
