--- a/public/static/styles/scss/_base.scss
+++ b/public/static/styles/scss/_base.scss
@@ -11,7 +11,7 @@
 
 form {
     width: 70vw;
-    height: 40vh;
+    height: max-content;
     background-color: rgb(50, 50, 60);
 
     border-radius: 1em;
