--- a/public/static/styles/scss/_base.scss
+++ b/public/static/styles/scss/_base.scss
@@ -9,6 +9,19 @@
     margin: 0;
 }
 
+#content {
+    height: 86vh;
+}
+
+h2 {
+    text-align: center;
+}
+
+a > img {
+    width: auto;
+    height: auto;
+}
+
 form {
     width: 70vw;
     height: max-content;
@@ -16,39 +29,52 @@ form {
 
     border-radius: 1em;
 
-    padding: 1em;
+    padding: 2em 1em;
 
     & > .input-container {
+        display: flex;
+        justify-content: center;
         position: relative;
         width: 100%;
         height: max-content;
-        margin: 0em 10em;
 
-        & input[type=text]:focus ~ label, & input[type=password]:focus ~ label, 
-        & input[type=text]:not(:placeholder-shown) ~ label, & input[type=password]:not(:placeholder-shown) ~ label {
-            transform: translate(calc(100% - 3em), -50%);
+        & input[type=text]:focus ~ .label-container, & input[type=password]:focus ~ .label-container, 
+        & input[type=text]:not(:placeholder-shown) ~ .label-container, & input[type=password]:not(:placeholder-shown) ~ .label-container {
+            background-color: rgb(30, 30, 40);
+            transform: translate(calc(70vw * 0.9 / 21), -150%);
         }
 
-        & input[type=text]:focus ~ label, & input[type=password]:focus ~ label {
+        & input[type=text]:focus ~ .label-container > label, & input[type=password]:focus ~ .label-container > label {
             color: #FF3333;
         }
 
-        & > label {
-            width: 100%;
+        & > .label-container {
             position: absolute;
             top: 50%;
             left: 0;
-            transform: translate(1.05em, -50%);
+            
+            font-size: 2rem;
+            width: fit-content;
+            height: fit-content;
+            padding: 0.5em;
+            border-radius: 1em;
+            
+            transform: translate(calc(70vw * 0.9 / 21), -50%);
             transition: transform 100ms ease-in-out,
-                        color 100ms ease-in-out;
+                        background-color 200ms ease-in-out;
+        }
 
+        & label {
+            font-size: 2rem;
             color: rgb(130, 130, 130);
             cursor: text;
+            transition: transform 100ms ease-in-out,
+                        color 200ms ease-in-out;
         }
     }
 
     & input[type=text], & input[type=password] {
-        width: 100%;
+        width: 90%;
         height: 100%;
         padding: 1em;
     }
@@ -56,11 +82,24 @@ form {
     & input {
         background-color: rgb(70, 70, 80) !important;
         color: rgb(130, 130, 130) !important;
+         
+        transition: background-color 70ms ease-in-out,
+                color 70ms ease-in-out;
 
         border-radius: 1em;
         border: none;
         &:focus {
             outline: none;
+        }
+        
+        &[type=submit]:hover {
+            background-color: lighten(rgb(70, 70, 80), 5) !important;
+            color: lighten(rgb(130, 130, 130), 5) !important;
+        }
+        
+        &[type=submit]:active {
+            background-color: darken(rgb(70, 70, 80), 2) !important;
+            color: darken(rgb(130, 130, 130), 2) !important;
         }
     }
 }
@@ -108,7 +147,7 @@ form {
 }
 
 .flex-wrap-none {
-    flex-wrap: none;
+    flex-wrap: nowrap;
 }
 
 .flex-justify-center {
