--- a/public/static/styles/scss/_dashboard.scss
+++ b/public/static/styles/scss/_dashboard.scss
@@ -1,8 +1,3 @@
-#content {
-    height: 70vh;
-    padding: 2em 0;
-}
-
 .swipe-button {
     font-size: 7.5rem;
     
@@ -24,7 +19,7 @@
 
 #cards {
     width: 100vw;
-    height: 60vh;
+    height: 55vh;
     position: relative;
 }
 
@@ -41,7 +36,7 @@
     position: absolute;
     top: 57.5%;
     right: 50%;
-    transition: filter 1s ease-in-out;
+    transition: all 1s ease-in-out;
     transform: translate(50%, -50%) rotate(0deg);
     -ms-transform: translate(50%, -50%) rotate(0deg);
 
