--- a/public/static/styles/scss/_header.scss
+++ b/public/static/styles/scss/_header.scss
@@ -1,7 +1,8 @@
 header {
+    height: 10vh;
     background-color: #FF3333;
     justify-content: space-between;
-    padding: 0.75em 3em;
+    padding: 2vh 3em;
     h2 {
         color: #FFFFFF;
         font-size: 4em;
@@ -10,7 +11,7 @@ header {
     & > div {
         width: 33vw;
         
-        & > img {
+        & > a > img, & > img {
             width: calc(64px * 1.5);
             height: calc(32px * 1.5);
         }
