--- a/public/static/styles/scss/_base.scss
+++ b/public/static/styles/scss/_base.scss
@@ -24,7 +24,7 @@ a > img {
 
 form {
     width: 70vw;
-    height: max-content;
+    max-height: 80vh;
     background-color: rgb(50, 50, 60);
 
     border-radius: 1em;
