--- a/public/static/styles/scss/_chat.scss
+++ b/public/static/styles/scss/_chat.scss
@@ -1,29 +1,82 @@
 .chat {
     display: grid;
-    grid-template-rows: 1fr 8fr;
+    grid-template-rows: 1fr 8fr 1.5fr;
     grid-template-columns: 1fr 5fr;
     grid-template-areas:
-        "sidebar profile"
-        "sidebar messages";
+        "dms profile"
+        "sidebar messages"
+        "sidebar send-message";
 
     & > * {
         border: 1px solid rgb(230, 230, 230);
     }
 }
 
-#sidebar {
-    grid-area: sidebar;
+#dms {
     & > h2 {
         color: rgb(230, 230, 230);
         font-size: 4rem;
-        padding: 0.35em;
+        padding: calc((86vh / 9 - 46.4px) / 2) 0;
     }
+}
+
+#sidebar {
+    grid-area: sidebar;
 }
 
 #profile {
     grid-area: profile;
+    & h1 {
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        font-size: 6em;
+        color: white;
+    }
 }
 
 #messages {
     grid-area: messages;
+    align-content: flex-start;
+}
+
+#send-message {
+    grid-area: send-message;
+    & form {
+        width: 100%;
+        background-color: rgb(30, 30, 30);
+    }
+}
+
+.message-container {
+    width: 100%;
+    height: max-content;
+    margin: 1em 2em;
+
+    & .message {
+        padding: 0.75em 0.4em;
+        border-radius: 1em;
+    
+        width: max-content;
+        height: max-content;
+    }
+
+    & .recieved {
+        margin-right: auto;
+        background-color: rgb(90, 90, 255);
+    }
+
+    & .sent {
+        margin-left: auto;
+        background-color: rgb(230, 230, 230);
+    }
+}
+
+.profile-button {
+    width: 100%;
+    height: max-content;
+    padding: 1em;
+
+    border: none;
+    margin-bottom: 0.4em;
 }
