--- a/public/static/styles/scss/_chat.scss
+++ b/public/static/styles/scss/_chat.scss
@@ -38,6 +38,7 @@
 #messages {
     grid-area: messages;
     align-content: flex-start;
+    max-width: calc(100% - 2px);
 }
 
 #send-message {
@@ -57,18 +58,20 @@
         padding: 0.75em 0.4em;
         border-radius: 1em;
     
-        width: max-content;
-        height: max-content;
+        min-width: max-content;
+        max-width: 40%;
+        min-height: min-content;
+        word-break: break-all;
     }
 
     & .recieved {
         margin-right: auto;
-        background-color: rgb(90, 90, 255);
+        background-color: rgb(230, 230, 230);
     }
 
     & .sent {
         margin-left: auto;
-        background-color: rgb(230, 230, 230);
+        background-color: rgb(90, 90, 255);
     }
 }
 
