--- a/public/static/styles/styles.css
+++ b/public/static/styles/styles.css
@@ -24,10 +24,10 @@ a > img {
 
 form {
   width: 70vw;
-  max-height: 80vh;
   background-color: rgb(50, 50, 60);
   border-radius: 1em;
   padding: 2em 1em;
+  margin: 10px;
 }
 form > .input-container {
   display: flex;
@@ -189,8 +189,8 @@ header > div > a > img, header > div > img {
 }
 
 .card {
-  width: 23vw;
-  height: 28vw;
+  width: 20vw;
+  height: 25vw;
   border-radius: 0.75em;
   border: 2px solid black;
   background-color: rgb(255, 255, 255);
@@ -273,6 +273,7 @@ header > div > a > img, header > div > img {
 #messages {
   grid-area: messages;
   align-content: flex-start;
+  max-width: calc(100% - 2px);
 }
 
 #send-message {
@@ -291,16 +292,18 @@ header > div > a > img, header > div > img {
 .message-container .message {
   padding: 0.75em 0.4em;
   border-radius: 1em;
-  width: max-content;
-  height: max-content;
+  min-width: max-content;
+  max-width: 40%;
+  min-height: min-content;
+  word-break: break-all;
 }
 .message-container .recieved {
   margin-right: auto;
-  background-color: rgb(90, 90, 255);
+  background-color: rgb(230, 230, 230);
 }
 .message-container .sent {
   margin-left: auto;
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(90, 90, 255);
 }
 
 .profile-button {
